@@ -114,6 +114,7 @@ Table of Contents
 * <a href="redundancy.html"><strong>Redundant and failover monitoring</strong></a><br>
 <a href="flapping.html"><strong>Detection and handling of state flapping</strong></a><br>
 <a href="escalations.html"><strong>Notification escalations</strong></a><br>
+<a href="oncallrotation.html"><strong>On-call notification rotations</strong></a><br>
 <a href="clusters.html"><strong>Monitoring service and host clusters</strong></a><br>
 <a href="dependencies.html"><strong>Host and service dependencies</strong></a><br>
 <a href="stalking.html"><strong>State stalking</strong></a><br>
