@@ -248,6 +248,7 @@ The change log for Nagios can be found online at <a href="http://www.nagios.org/
 	<li>New check statistics and have been added to the "Performance Info" screen.</li>
 	<li>Added <a href="http://www.splunk.com/" target="_blank">Splunk</a></li> integration options to various CGIs.  Integration is controlled by the <a href="configcgi.html#enable_splunk_integration">enable_splunk_integration</a> and <a href="configcgi.html#splunk_url">splunk_url</a> options in the CGI config file.
 	<li>Added new <a href="configcgi.html#notes_url_target">notes_url_target</a> and <a href="configcgi.html#action_url_target">action_url_target</a> options to control what frame notes and action URLs are opened in.</li>
+	<li>Added new <a href="configcgi.html#lock_author_names">lock_author_names</a> option to prevent alteration of author names when users submit comments, acknowledgements, and scheduled downtime.</li>
 	</ul>
 </li>
 <br>
